objects/copado__User_Story_Task__c.object
<CustomObject>
    <fields>
        <fullName>Effort_d__c</fullName>
        <label>Effort (d)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Efforts_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Efforts Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>copado__User_Story__r.copado__Sprint__r.copado__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Sprint_Ressource_Team_Location__c</fullName>
        <formula>copado__User_Story__r.copado__Sprint__r.copado__Project__r.Name +&apos;/&apos;+  copado__User_Story__r.copado__Sprint__r.Name +&apos;/&apos;+  Ressource__r.Name +&apos;/&apos;+  text(Ressource__r.Team__c) +&apos;/&apos;+ if(Onsite__c = TRUE, &apos;Onsite&apos;,&apos;Offsite&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project/Sprint/Ressource/Team/Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ressource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ressource</label>
        <referenceTo>Ressource__c</referenceTo>
        <relationshipLabel>User Story Tasks</relationshipLabel>
        <relationshipName>User_Story_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Task_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Task_Specification__c</fullName>
        <label>Task Specification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>text(Ressource__r.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Sheet</label>
        <referenceTo>Time_Sheet__c</referenceTo>
        <relationshipLabel>User Story Tasks</relationshipLabel>
        <relationshipName>User_Story_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story_Title__c</fullName>
        <formula>copado__User_Story__r.copado__User_Story_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Story Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Hours_Remaining__c</fullName>
        <label>Hours Remaining</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Tasks</relationshipLabel>
        <relationshipName>User_Story_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Story Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Effort_d__c</columns>
        <filterScope>Everything</filterScope>
        <label>All User Story Tasks</label>
    </listViews>
    <listViews>
        <fullName>All_Open_User_Story_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Effort_d__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Deferred</value>
        </filters>
        <label>All Open User Story Tasks</label>
    </listViews>
    <listViews>
        <fullName>My_User_Story_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Effort_d__c</columns>
        <filterScope>Mine</filterScope>
        <label>My User Story Tasks</label>
    </listViews>
    <nameField>
        <displayFormat>UST-{0000000}</displayFormat>
        <label>User Story Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Tasks</pluralLabel>
    <recordTypes>
        <fullName>Deployment</fullName>
        <active>true</active>
        <label>Deployment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Implementation</fullName>
        <active>true</active>
        <label>Marketing Implementation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mulesoft_Implementation</fullName>
        <active>true</active>
        <label>Mulesoft Implementation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Implementation</fullName>
        <active>true</active>
        <label>Salesforce Implementation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Specification_Coordination</fullName>
        <active>true</active>
        <label>Technical Specification &amp; Coordination</label>
    </recordTypes>
    <recordTypes>
        <fullName>Testing</fullName>
        <active>true</active>
        <label>Testing</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Do_not_allow_to_Reopen_Tasks</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(copado__Status__c) &amp;&amp;
text(priorvalue(copado__Status__c))=&apos;Completed&apos; &amp;&amp; text(copado__Status__c)!=&apos;Create Release Notes&apos;</errorConditionFormula>
        <errorMessage>You are not allowed to reopen tasks</errorMessage>
    </validationRules>
</CustomObject>